<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MeasurementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:scrollbars="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_bharat_petroleum_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_measurement"
            android:textColor="#000"
            android:textSize="30sp"
            android:layout_margin="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="#777" />

        <TextView
            android:layout_marginTop="10dp"
            style="@style/StaticTextViewTheme"
            android:text="@string/enter_chainage" />
        <EditText
            android:id="@+id/chainage_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000"
            android:inputType="number"
            android:hint="@string/enter_chainage_link" />

        <TextView
            style="@style/StaticTextViewTheme"
            android:text="@string/enter_tlp_number" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tlp_prefix_edit_text"
                android:textColor="#000"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/tlp_number_edit_text"
                android:layout_width="wrap_content"
                android:minWidth="50dp"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>
<!--        <Spinner-->
<!--            android:id="@+id/tlp_number_spinner"-->
<!--            android:gravity="center"-->
<!--            android:textAlignment="center"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content" />-->

        <TextView
            style="@style/StaticTextViewTheme"
            android:text="@string/enter_tlp_type" />
        <Spinner
            android:id="@+id/tlp_type_spinner"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/StaticTextViewTheme"
            android:text="@string/enter_psp_value" />
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/psp_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/SeekBarWithoutSteps"
                android:layout_weight="0.8" />
            <TextView
                android:id="@+id/psp_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_weight="0.2" />
        </LinearLayout>

        <TextView
            style="@style/StaticTextViewTheme"
            android:text="@string/enter_ac_value" />
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/ac_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/SeekBarWithoutSteps"
                android:layout_weight="0.8" />
            <TextView
                android:id="@+id/ac_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_weight="0.2" />
        </LinearLayout>

        <TextView
            style="@style/StaticTextViewTheme"
            android:text="@string/enter_mg_zn_anode_value" />
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/mg_zn_anode_seek_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/SeekBarWithoutSteps"
                android:layout_weight="0.8" />
            <TextView
                android:id="@+id/mg_zn_anode_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_weight="0.2" />
        </LinearLayout>

        <TextView
            style="@style/StaticTextViewTheme"
            android:text="@string/enter_remarks" />
        <EditText
            android:id="@+id/measurement_remarks_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/description_static"
            android:padding="10dp"
            android:importantForAutofill="yes"
            android:inputType="textMultiLine" />

        <TextView
            style="@style/StaticTextViewTheme"
            android:text="@string/is_maintenance_required" />
        <Spinner
            android:id="@+id/maintenance_required_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="80dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/measurement_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:visibility="gone"
            android:scaleType="fitXY"
            android:adjustViewBounds="true" />

        <Button
            android:id="@+id/measurement_take_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/attach_picture"
            android:drawableEnd="@drawable/ic_camera_black_24dp"
            android:drawablePadding="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="#777" />

        <Button
            android:id="@+id/submit_measurement_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_location"
            android:drawablePadding="10dp"
            android:enabled="false"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:textColor="#000" />

        <ProgressBar
            android:layout_margin="30dp"
            android:id="@+id/submit_measurement_progress_bar"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>