<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_activity_layout_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bharat_petroleum_logo" />

        <TextView
            android:layout_weight="1"
            android:text="@string/common_signin_button_text"
            style="@style/StaticTextViewTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rou_officer"
                android:layout_margin="10dp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worker"
                android:layout_margin="10dp" />
        </RadioGroup>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/email_edit_text_hint"
            android:ems="10"
            android:layout_weight="1"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password_edit_text_hint"
            android:layout_margin="20dp"
            android:ems="10"
            android:layout_weight="1"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/sign_in_button_hint"
            android:drawableEnd="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:textSize="20sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_activity_layout_group"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>