<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ReportViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/report_main_heading_text_view"
            android:layout_width="wrap_content"
            android:textSize="25sp"
            android:textColor="#000"
            style="@style/StaticTextViewTheme"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/report_main_subheading_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:layout_margin="10dp">

            <fragment
                android:id="@+id/report_view_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_height="500dp"/>

            <TextView
                android:id="@+id/exact_location_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/app_name"
                android:background="#FFF"
                android:alpha="0.8"
                android:padding="5dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StaticTextViewThemeRecyclerView"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/pipeline"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/report_map_name_text_view"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            style="@style/StaticTextViewTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StaticTextViewThemeRecyclerView"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/report_type_static"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/report_report_type_text_view"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            style="@style/StaticTextViewTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StaticTextViewThemeRecyclerView"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/priority_static"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/report_report_priority_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#000"
            style="@style/StaticTextViewTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StaticTextViewThemeRecyclerView"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:text="@string/description"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/report_description_text_view"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            style="@style/StaticTextViewTheme" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/images_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/acknowledge_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acknowledge"
            android:drawableEnd="@drawable/ic_done_all_black_24dp"
            android:drawablePadding="10dp"
            android:layout_margin="20dp"
            android:layout_gravity="center" />

        <ProgressBar
            android:id="@+id/updating_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="20dp"
            android:layout_gravity="center" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>