<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:layout_margin="10dp"
    map:cardCornerRadius="5dp"
    map:cardElevation="5dp"
    map:cardBackgroundColor="@color/colorCardBackground"
    android:hapticFeedbackEnabled="true"
    xmlns:map="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">

        <com.google.android.gms.maps.MapView
            android:id="@+id/report_report_location"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            map:cameraZoom="13"
            map:liteMode="true" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/StaticTextViewThemeRecyclerView"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:text="@string/by"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/report_report_by_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="2dp"
                style="@style/StaticTextViewThemeRecyclerView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/StaticTextViewThemeRecyclerView"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:text="@string/report_type_static"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/report_report_type_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="2dp"
                style="@style/StaticTextViewThemeRecyclerView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/StaticTextViewThemeRecyclerView"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:text="@string/priority_static"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/report_report_priority_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="2dp"
                style="@style/StaticTextViewThemeRecyclerView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/StaticTextViewThemeRecyclerView"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="0dp"
                android:text="@string/description"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/report_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="2dp"
                style="@style/StaticTextViewThemeRecyclerView" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>