<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MapsActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/welcome_static_text_view"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="#000"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/welcome_to_bpcl_pipelines"
        style="@style/StaticTextViewTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_static_text_view"
        android:layout_centerHorizontal="true"
        android:background="#FFF"
        app:cardCornerRadius="5dp"
        android:padding="10dp"
        android:alpha="0.9"
        android:gravity="center">

        <Spinner
            android:id="@+id/chainage_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true" />
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_centerInParent="true" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:orientation="horizontal">-->

<!--        <Button-->
<!--            android:id="@+id/start_stop_trip"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="40dp"-->
<!--            android:layout_weight="1"-->
<!--            android:textColor="#000"-->
<!--            android:textStyle="bold"-->
<!--            android:alpha="0.8"-->
<!--            android:text="@string/start_button_text" />-->

<!--        <Button-->
<!--            android:id="@+id/alert_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="40dp"-->
<!--            android:layout_weight="1"-->
<!--            android:visibility="invisible"-->
<!--            android:textColor="#000"-->
<!--            android:textStyle="bold"-->
<!--            android:alpha="0.8"-->
<!--            android:text="@string/report" />-->

<!--    </LinearLayout>-->

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        app:fab_addButtonColorNormal="@color/colorAccent"
        app:fab_addButtonColorPressed="@color/colorAccent"
        app:fab_addButtonPlusIconColor="#FFF"
        app:fab_labelStyle="@style/FabLabelStyle">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/take_measurement_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFF"
            app:fab_colorPressed="#FFF"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_take_measurement_24dp"
            app:fab_title="@string/measure" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/alert_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFF"
            app:fab_colorPressed="#FFF"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_add_alert_24dp"
            app:fab_title="@string/report" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/start_stop_trip_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFF"
            app:fab_colorPressed="#FFF"
            app:fab_size="mini"
            app:fab_icon="@drawable/ic_start_stop_near_me_24dp"
            app:fab_title="@string/start_button_text" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>